# didi_taxi

./: .gitignore  CMakeLists.txt  README.en.md  README.md
res/: resources.qrc
source/include/: call_taxi_info.h  charge_dialog.h  driver.h  global.h  log.h  login_dialog.h  mainwindow.h  map_graphics_view.h  map_manager.h  money.h  passenger.h  register_dialog.h  user_data_manager.h
source/src/: charge_dialog.cpp  driver.cpp  log.cpp  login_dialog.cpp  main.cpp  mainwindow.cpp  map_graphics_view.cpp  map_manager.cpp  money.cpp  passenger.cpp  register_dialog.cpp  user_data_manager.cpp
ui/: charge_dialog.ui  login_dialog.ui  mainwindow.ui  register_dialog.ui
